# dspy_autodev

./: ether_module.py  install.sh  notes.md  objective.md  pytest.ini  run.sh  todo.md
Create new file: tests/: test_main_loop_integration.py
dpsy-pipeline/: pyproject.toml
dpsy-pipeline/dpsy_pipeline/: main.py
dpsy-pipeline/tests/: test_main.py
dspy-pipeline/: conftest.py  main_loop.py  pyproject.toml  signature.txt
dspy-pipeline/dspy_pipeline/: autodev_runner.py  code_gatherer.py  dspy.py  fix_applier.py  fix_instruction_generator.py  fix_instruction_signature.py  fix_module.py  fix_signature.py  main.py  main_loop.py  qa_module.py  qa_signature.py  real_signature.py  utils.py
dspy-pipeline/tests/: test_fix_module.py  test_main.py
dspy_pipeline/: code_gatherer.py  fix_applier.py  fix_instruction_generator.py  main_loop.py
path/dspy-pipeline/dspy_pipeline/: main_loop.py
path/dspy-pipeline/tests/: test_main.py
tests/: test_autodev_runner.py  test_code_editing.py  test_code_gatherer.py  test_ether_module.py  test_fix_applier.py  test_fix_applier_json_edge.py  test_fix_applier_json_patch.py  test_fix_instruction_generator_edge.py  test_main_loop.py  test_main_loop_integration.py  test_utils.py
