[tool.poetry]
name = "autodev-pipeline"
version = "0.1.1"
description = "Dspy pipeline package"
authors = ["Tom Dörr <tomdoerr96@gmail.com>"]

packages = [
    { include = "dspy_pipeline" }
]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.0.0"

[tool.poetry.scripts]
audev = "dspy_pipeline.main:main"
